# biometric_vqa

./: .gitignore  LICENSE  README.md
src/: pyproject.toml
src/biometric_vqa/datasets/ACDC/: download_fast.py  download_raw.py  preprocess_detection.py  preprocess_segmentation.py
src/biometric_vqa/datasets/AMOS22/: download.py  preprocess_detection.py  preprocess_segmentation.py
src/biometric_vqa/datasets/AbdomenAtlas__1_0__Mini/: download.py  preprocess_detection.py  preprocess_segmentation.py
src/biometric_vqa/datasets/AbdomenCT_1K/: download.py  preprocess_detection.py  preprocess_segmentation.py
src/biometric_vqa/datasets/BCV15/: download.py  preprocess_detection.py  preprocess_segmentation.py
src/biometric_vqa/datasets/BraTS24/: download.py  preprocess_biometry.py  preprocess_detection.py  preprocess_segmentation.py
src/biometric_vqa/datasets/CAMUS/: download_fast.py  download_raw.py  preprocess_detection.py  preprocess_segmentation.py
src/biometric_vqa/datasets/Ceph_Biometrics_400/: download_fast.py  download_raw.py  preprocess_biometry.py
src/biometric_vqa/datasets/CrossMoDA/: download_fast.py  download_raw.py  preprocess_detection.py  preprocess_segmentation.py
src/biometric_vqa/datasets/FLARE22/: download_fast.py  download_raw.py  preprocess_detection.py  preprocess_segmentation.py
src/biometric_vqa/datasets/FeTA24/: download.py  preprocess_biometry.py  preprocess_detection.py  preprocess_segmentation.py
src/biometric_vqa/datasets/HNTSMRG24/: download.py  preprocess_biometry.py  preprocess_detection.py  preprocess_segmentation.py
src/biometric_vqa/datasets/ISLES24/: download.py  preprocess_detection.py  preprocess_segmentation.py
src/biometric_vqa/datasets/KiPA22/: download.py  preprocess_biometry.py  preprocess_detection.py  preprocess_segmentation.py
src/biometric_vqa/datasets/KiTS23/: download_fast.py  download_raw.py  preprocess_biometry.py  preprocess_detection.py  (+1 more)
src/biometric_vqa/utils/: benchmark_planner.py  data_conversion.py  doc_to_visual_utils.py  preprocess_utils.py  visualization_utils.py
(+30 files in other folders)
